--- a/least_squares_regression.ipynb
+++ b/least_squares_regression.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "exvAcEpND0q7"
       },
@@ -97,16 +97,20 @@
     {
       "cell_type": "code",
       "source": [
-        "class linear_model:\n",
+        "class Linear_model:\n",
         "  def __init__(self, batch_size):\n",
         "    self.batch_size\n",
+        "\n",
+        "  # X of shape (n, m) with m observations, Y with shape (m)\n",
         "  def linear_regression(X, Y, k_val):\n",
         "    x_bar, y_bar = np.mean(X), np.mean(Y)\n",
         "    B1_numerator, B1_denominator = 0, 0\n",
-        "    for i in range(len(X)):\n",
-        "        B1_numerator  += (X[i] - x_bar)*(Y[i] - y_bar)\n",
-        "        B1_denominator += (X[i] - x_bar)**2\n",
-        "    beta_hat_1 = B1_numerator / B1_denominator\n",
+        "    Beta = np.zeros(X.shape[0])\n",
+        "    for n in range(X.shape[0]):\n",
+        "      for m in range(X.shape[1]):\n",
+        "          B1_numerator  += (X[m] - x_bar)*(Y[m] - y_bar)\n",
+        "          B1_denominator += (X[m] - x_bar)**2\n",
+        "      Beta[n] = B1_numerator / B1_denominator\n",
         "    beta_hat_0 = y_bar - beta_hat_1*x_bar\n",
         "    Y_hat = beta_hat_0 + beta_hat_1*X\n",
         "    res_sum_sq = 0\n",
@@ -118,8 +122,35 @@
       "metadata": {
         "id": "UEOYC5TskEFx"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.array([[0, 1, 2],\n",
+        "             [3,4,5],\n",
+        "             [6,7,8],\n",
+        "             [9,0,1]])\n",
+        "print(X.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aKtu2ACmU6NW",
+        "outputId": "ce1c4dd9-a8f4-4a63-8637-43b84562163b"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 3)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
